kubes/django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-django
  labels:
    app: feedback
    part: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedback
      part: django
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: feedback
        part: django
    spec:
      volumes:
        - name: static
          persistentVolumeClaim:
            claimName: feedback-django-static
      containers:
        - name: gunicorn
          image: as207960/feedback:(version)
          imagePullPolicy: Always
          command: ["gunicorn", "-w", "8", "-b", "[::]:8000", "--forwarded-allow-ips", "*", "--access-logfile", "-", "--log-level=debug", "--timeout=90", "as207960_feedback.wsgi:application"]
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: "/app/static/"
              name: static
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: feedback-django
spec:
  podSelector:
    matchLabels:
      app: feedback
      part: django
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: feedback
          part: nginx
    ports:
    - protocol: TCP
      port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: feedback-django
  labels:
    app: feedback
    part: django
spec:
  selector:
    app: feedback
    part: django
  ports:
    - port: 8000
      targetPort: 8000
