kubes/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-nginx
  labels:
    app: feedback
    part: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedback
      part: nginx
  template:
    metadata:
      annotations:
        cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: feedback
        part: nginx
    spec:
      volumes:
        - name: static
          persistentVolumeClaim:
            claimName: feedback-django-static
        - name: conf
          configMap:
            name: feedback-nginx-conf
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/data/static/"
              name: static
            - mountPath: "/etc/nginx/nginx.conf"
              name: conf
              subPath: "nginx.conf"
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: feedback-nginx
spec:
  podSelector:
    matchLabels:
      app: feedback
      part: nginx
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: feedback-nginx
  labels:
    app: feedback
    part: nginx
spec:
  selector:
    app: feedback
    part: nginx
  ports:
    - port: 80
      targetPort: 80
      name: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feedback-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
    - hosts:
        - feedback.glauca.digital
      secretName: feedback-tls
  rules:
  - host: feedback.glauca.digital
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: feedback-nginx
            port:
              number: 80
